// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image component Image functional tests When getUrl returns null, with no errorComponent, should throw an error 1`] = `"URL not found for given property"`;

exports[`Image component Image snapshots matches snapshot with additional props for img and input 1`] = `
<DocumentFragment>
  <img
    alt="test img"
    class="img-class"
    src="mock object url"
  />
  <input
    accept="image/*"
    class="input-class"
    type="file"
  />
</DocumentFragment>
`;

exports[`Image component Image snapshots matches snapshot with standard props 1`] = `
<DocumentFragment>
  <img
    alt=""
    src="mock object url"
  />
</DocumentFragment>
`;

exports[`Image component Image snapshots renders an error message if an errorComponent is provided 1`] = `
<DocumentFragment>
  <span>
    Error: URL not found for given property
  </span>
</DocumentFragment>
`;
